patching a bug that caused icons to disappear on Safari

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -52,7 +52,7 @@ body {
     flex: 1;
 	max-width: 350px;
 }
-.social-icons {
+#social-icons {
 	a {
 		color: $about_bg_color;
 		font-size: 3.5em;
@@ -276,7 +276,7 @@ body {
 			margin: 0px 65px 0px 40px;
 		}
 	}
-	.social-icons {
+	#social-icons {
 		display: inline-block;
 	}
 }
